abandon du projet

--- a/src/ui.html
+++ b/src/ui.html
@@ -41,6 +41,7 @@
             id="webview" 
             allowpopups 
             webpreferences="contextIsolation=true"
+            partition="persist:tor"
             style="width:100%; height:calc(100vh - 70px);"
         ></webview>
         <!-- Menu de configuration caché par défaut -->
