--- a/src/ui.html
+++ b/src/ui.html
@@ -22,6 +22,7 @@
                 <button id="go-btn" title="Aller">▶</button>
             </div>
             <div class="nav-settings">
+                <button id="extensions-btn" title="Extensions">🧩</button>
                 <button id="config-btn" title="Paramètres">⚙️</button>
                 <div class="window-controls">
                     <button id="minimize-btn" title="Réduire">─</button>
@@ -37,6 +38,27 @@
             <span id="tracker-status" title="Blocage des trackers">🟢 Anti-trackers</span>
         </div>
 
+        <!-- Menu Extensions harmonisé -->
+        <div id="extensions-menu" class="hidden">
+            <div class="menu-header">
+                <h2><span style="font-size:1.3em;">🧩</span> Extensions</h2>
+                <button id="close-extensions">✖</button>
+            </div>
+            <div class="menu-content">
+                <form id="install-extension-form" style="display:flex;align-items:center;gap:10px;margin-bottom:10px;">
+                    <span style="font-size:1.1em;">📦</span>
+                    <label for="extension-file" style="font-size:0.97em;min-width:120px;">Installer un module JS&nbsp;:</label>
+                    <input type="file" id="extension-file" accept=".js" style="font-size:0.97em;flex:1;">
+                    <button type="submit" style="font-size:0.97em;padding:4px 14px;border-radius:6px;background:var(--accent-color);color:#fff;border:none;">Installer</button>
+                    <span id="extension-install-msg" style="margin-left:8px;font-size:0.93em;color:#8f8;min-width:80px;"></span>
+                </form>
+                <hr style="margin:12px 0 10px 0;border:0;border-top:1px solid var(--border-color);">
+                <div id="js-extensions-list" style="margin-bottom:8px;"></div>
+                <hr style="margin:12px 0 10px 0;border:0;border-top:1px solid var(--border-color);">
+                <div id="store-extensions-list" style="margin-bottom:8px;"></div>
+            </div>
+        </div>
+
         <webview 
             id="webview" 
             allowpopups 
@@ -45,7 +67,7 @@
             style="width:100%; height:calc(100vh - 70px);"
         ></webview>
         <!-- Menu de configuration caché par défaut -->
-        <div id="config-menu" class="hidden" style="position:fixed;top:60px;right:20px;z-index:1000;background:#222;color:#fff;padding:24px 20px 16px 20px;border-radius:10px;box-shadow:0 2px 16px #000a;min-width:260px;max-width:90vw;">
+        <div id="config-menu" class="hidden" style="position:fixed;top:60px;right:20px;z-index:1000;background:#000000;color:#fff;padding:24px 20px 16px 20px;border-radius:10px;box-shadow:0 2px 16px #000a;min-width:260px;max-width:90vw;">
             <button id="close-config" style="position:absolute;top:8px;right:8px;background:none;border:none;color:#fff;font-size:1.2em;cursor:pointer;">✖</button>
             <h3 style="margin-top:0">Paramètres</h3>
             <div style="margin-bottom:10px;">
